v.121018
- Ancestral sequences can differently indicate insertions and deletions.


v.121002
- Alignment merge now accepts trees such as "(t1:#.#,t2:#.#);".
  Provided with "-t=filename" or "-tree=tree-string".


v.120827
- All files now under the GPL licence.


v.120814
- Can now also merge "alignments" of one sequence
- New option '-mergedist=#' to define the distance for two alignments


v.120717
- All input data now converted to upper-case.


v.120716
- Fixed the translated alignment (been broken in recent clean up)
- Fixed the output order of ancestral sequences


v.120712
- For codon alignment, MAFFT guide tree now with protein sequences
  (fixes several issues with codon alignment)


v.120626
- Guide tree estimation from a MAFFT alignment
- Merge of two pre-defined alignments
- Support for Exonerate and MAFFT on Windows
- Clean up of some code


v.111130
- Exonerate anchoring now also for guidetree computation. Experimental!


v.111129
- Allow guide trees with no branch lengths. Default branch length is 0.1;
  use -fixedbranches=# to change.
- Removed the dependency to boost libraries.


v.111013
- First update in Google Code
- Alignment speed ups with Exonerate anchoring.


v.101018
- Last version before migration to Google Code